--- a/cadastro.html
+++ b/cadastro.html
@@ -1,77 +1,256 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro — ONG Esperança Viva</title>
-  <link rel="stylesheet" href="../css/styles.css" />
+
+  <link rel="icon" type="image/png" href="assets/images/logo.png">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/styles.css" />
+
+  <style>
+    body {
+      font-family: "Inter", sans-serif;
+      background-color: #f7f8fa;
+      color: #333;
+      margin: 0;
+    }
+
+    header {
+      background-color: #1b5e20;
+      color: #fff;
+      padding: 15px 25px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    }
+
+    .logo-container {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .logo-container img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #fff;
+      object-fit: cover;
+    }
+
+    .menu-toggle {
+      font-size: 28px;
+      cursor: pointer;
+      background: none;
+      border: none;
+      color: #fff;
+      display: none;
+    }
+
+    nav {
+      display: flex;
+      gap: 25px;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: all 0.3s;
+      padding: 5px 8px;
+      border-radius: 6px;
+    }
+
+    nav a:hover,
+    nav a.active {
+      background-color: #2e7d32;
+      color: #e8f5e9;
+    }
+
+    /* Menu Responsivo */
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+        margin-right: auto;
+      }
+      nav {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        background-color: #1b5e20;
+        text-align: center;
+      }
+      nav.active {
+        display: flex;
+      }
+    }
+
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    fieldset {
+      border: 2px solid #e0e0e0;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+
+    legend {
+      font-weight: 600;
+      color: #1b5e20;
+    }
+
+    label {
+      display: block;
+      margin-top: 10px;
+      font-weight: 500;
+    }
+
+    input, select, textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-top: 5px;
+      font-size: 1rem;
+    }
+
+    button.cta {
+      background-color: #2e7d32;
+      color: #fff;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: background 0.3s;
+      display: block;
+      margin: 0 auto;
+    }
+
+    button.cta:hover {
+      background-color: #1b5e20;
+    }
+
+    footer {
+      background-color: #1b5e20;
+      color: #fff;
+      text-align: center;
+      padding: 20px 0;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-  <a class="skip-link" href="#main">Pular para o conteúdo</a>
-  <header class="site-header">
-    <div class="container">
-      <a href="index.html"><img src="../assets/images/logo.png" alt="Logo ONG" class="logo" /></a>
-      <nav aria-label="Menu principal">
-        <ul class="nav-list">
-          <li><a href="index.html">Início</a></li>
-          <li><a href="projetos.html">Projetos</a></li>
-          <li><a href="cadastro.html">Cadastro</a></li>
-        </ul>
-      </nav>
+  <header>
+    <button class="menu-toggle" id="menu-toggle">☰</button>
+    <div class="logo-container">
+      <img src="assets/images/logo.png" alt="Logo ONG">
+      <h1>ONG Esperança Viva</h1>
     </div>
+    <nav id="nav-menu">
+      <a href="index.html">Início</a>
+      <a href="projetos.html">Projetos</a>
+      <a href="cadastro.html" class="active">Cadastro</a>
+    </nav>
   </header>
 
-  <main id="main" class="container">
-    <h1>Cadastro de voluntário / doador</h1>
-    <form id="cadastroForm" action="#" method="post" novalidate>
-      <fieldset>
-        <legend>Dados pessoais</legend>
-        <label for="nome">Nome completo</label>
-        <input id="nome" name="nome" type="text" required />
+  <main>
+    <section>
+      <h2>Cadastre-se como Voluntário</h2>
+      <p>Preencha o formulário abaixo e venha transformar vidas conosco!</p>
 
-        <label for="email">E-mail</label>
-        <input id="email" name="email" type="email" required />
+      <form id="cadastroForm">
+        <!-- DADOS PESSOAIS -->
+        <fieldset>
+          <legend>Dados Pessoais</legend>
+          <label for="nome">Nome Completo*</label>
+          <input id="nome" name="nome" type="text" required>
 
-        <label for="cpf">CPF</label>
-        <input id="cpf" name="cpf" type="text" inputmode="numeric" maxlength="14" required />
+          <label for="cpf">CPF*</label>
+          <input id="cpf" name="cpf" type="text" maxlength="14" required>
 
-        <label for="telefone">Telefone</label>
-        <input id="telefone" name="telefone" type="tel" inputmode="tel" maxlength="15" required />
+          <label for="nascimento">Data de Nascimento*</label>
+          <input id="nascimento" name="nascimento" type="date" required>
+        </fieldset>
 
-        <label for="nascimento">Data de nascimento</label>
-        <input id="nascimento" name="nascimento" type="date" required />
+        <!-- CONTATO -->
+        <fieldset>
+          <legend>Contato</legend>
+          <label for="email">E-mail*</label>
+          <input id="email" name="email" type="email" required>
 
-      </fieldset>
+          <label for="telefone">Telefone*</label>
+          <input id="telefone" name="telefone" type="tel" maxlength="15" required>
+        </fieldset>
 
-      <fieldset>
-        <legend>Endereço</legend>
-        <label for="cep">CEP</label>
-        <input id="cep" name="cep" type="text" maxlength="9" required />
-        <label for="endereco">Endereço</label>
-        <input id="endereco" name="endereco" type="text" required />
-        <label for="cidade">Cidade</label>
-        <input id="cidade" name="cidade" type="text" required />
-        <label for="estado">Estado</label>
-        <select id="estado" name="estado" required>
-          <option value="">Selecione</option>
-          <option value="SP">SP</option>
-          <option value="RJ">RJ</option>
-          <!-- adicionar demais estados -->
-        </select>
-      </fieldset>
+        <!-- ENDEREÇO -->
+        <fieldset>
+          <legend>Endereço</legend>
+          <label for="cep">CEP*</label>
+          <input id="cep" name="cep" type="text" maxlength="9" required>
 
-      <button type="submit" class="btn">Enviar cadastro</button>
-    </form>
+          <label for="endereco">Rua*</label>
+          <input id="endereco" name="endereco" type="text" required>
+
+          <label for="numero">Número*</label>
+          <input id="numero" name="numero" type="text" required>
+
+          <label for="bairro">Bairro*</label>
+          <input id="bairro" name="bairro" type="text" required>
+
+          <label for="cidade">Cidade*</label>
+          <input id="cidade" name="cidade" type="text" required>
+
+          <label for="estado">Estado*</label>
+          <input id="estado" name="estado" type="text" maxlength="2" required>
+        </fieldset>
+
+        <!-- PARTICIPAÇÃO -->
+        <fieldset>
+          <legend>Participação</legend>
+          <label for="interesse">Área de Interesse*</label>
+          <select id="interesse" name="interesse" required>
+            <option value="">Selecione...</option>
+            <option>Educação</option>
+            <option>Meio Ambiente</option>
+            <option>Ação Social</option>
+            <option>Eventos</option>
+            <option>Doações</option>
+          </select>
+
+          <label for="mensagem">Mensagem</label>
+          <textarea id="mensagem" name="mensagem" rows="4"></textarea>
+        </fieldset>
+
+        <button type="submit" class="cta">Enviar Cadastro</button>
+      </form>
+    </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>© <span id="year3"></span> ONG Esperança Viva</p>
-    </div>
+  <footer>
+    © 2025 ONG Esperança Viva — Todos os direitos reservados.
   </footer>
 
-  <script src="../js/masks.js"></script>
-  <script src="../js/app.js"></script>
-  <script>document.getElementById('year3').textContent = new Date().getFullYear();</script>
+  <script>
+    const toggle = document.getElementById("menu-toggle");
+    const nav = document.getElementById("nav-menu");
+    toggle.addEventListener("click", () => nav.classList.toggle("active"));
+  </script>
 </body>
 </html>
